enabled remote debugger, added entry point script, using default cache provider, handling notFound page